# cantons-challenge-collector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml  railway.json
.github/workflows/: ci.yml
docker/dev/: compose.yaml
docker/prod/: compose.yaml
src/cantons_challenge_collector/: site.py
templates/: index.html  result_error.html  result_ok.html
